<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/light_blue"
    tools:context=".MainActivity">

...
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/light_blue"
        android:elevation="4dp"
        app:menu="@menu/ingredient_sort_menu"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
...
<!--            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/nav_host_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:defaultNavHost="true"
        android:background="@color/light_blue"
        android:backgroundTintMode="add"
...
        app:navGraph="@navigation/nav_graph" />
        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/header_menu"
        app:itemIconTint="@color/white_blue"
...
